<?xml version="1.0"?>
<package format="2">
  <name>ros2_time</name>
  <version>0.0.0</version>
  <description>
    Time facilities for ROS 2.
  </description>
  <maintainer email="ponsler@gmail.com">Brett Ponsler</maintainer>
  <license>Apache iLicense 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
    
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
